# bia-zarr

./: LICENSE  README.md  pyproject.toml
bia_zarr/: arrays.py  cli.py  genmeta.py  omezarrmeta.py  omezarrtypes.py  proxyimage.py  rendering.py  thing.py  write.py  zarr2zarr.py
bia_zarr/tests/: test_omezarrtypes.py  test_proxyimage.py  test_write.py  test_zarr2zarr.py
biazarr/: proxyimage.py
biazarr/tests/: test_proxyimage.py
zarr2zarr/: cli.py  proxyimage.py  rendering.py
