[project]
name = "bia-zarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "dask>=2025.1.0",
    "fsspec>=2024.12.0",
    "microfilm>=0.3.0",
    "pillow>=11.1.0",
    "pydantic>=2.10.6",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "tensorstore>=0.1.71",
    "typer>=0.15.1",
    "zarr>=3.0.2",
]

[project.scripts]
bia-zarr = "bia_zarr.cli:app"
